; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/ulp/srpt/extr_ib_srpt.c_srpt_free_ioctx.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/ulp/srpt/extr_ib_srpt.c_srpt_free_ioctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.srpt_device = type { i32 }
%struct.srpt_ioctx = type { i32, i32 }
%struct.kmem_cache = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.srpt_device*, %struct.srpt_ioctx*, %struct.kmem_cache*, i32)* @srpt_free_ioctx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @srpt_free_ioctx(%struct.srpt_device* %0, %struct.srpt_ioctx* %1, %struct.kmem_cache* %2, i32 %3) #0 {
  %5 = alloca %struct.srpt_device*, align 8
  %6 = alloca %struct.srpt_ioctx*, align 8
  %7 = alloca %struct.kmem_cache*, align 8
  %8 = alloca i32, align 4
  store %struct.srpt_device* %0, %struct.srpt_device** %5, align 8
  store %struct.srpt_ioctx* %1, %struct.srpt_ioctx** %6, align 8
  store %struct.kmem_cache* %2, %struct.kmem_cache** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.srpt_ioctx*, %struct.srpt_ioctx** %6, align 8
  %10 = icmp ne %struct.srpt_ioctx* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %4
  br label %30

12:                                               ; preds = %4
  %13 = load %struct.srpt_device*, %struct.srpt_device** %5, align 8
  %14 = getelementptr inbounds %struct.srpt_device, %struct.srpt_device* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.srpt_ioctx*, %struct.srpt_ioctx** %6, align 8
  %17 = getelementptr inbounds %struct.srpt_ioctx, %struct.srpt_ioctx* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.kmem_cache*, %struct.kmem_cache** %7, align 8
  %20 = call i32 @kmem_cache_size(%struct.kmem_cache* %19)
  %21 = load i32, i32* %8, align 4
  %22 = call i32 @ib_dma_unmap_single(i32 %15, i32 %18, i32 %20, i32 %21)
  %23 = load %struct.kmem_cache*, %struct.kmem_cache** %7, align 8
  %24 = load %struct.srpt_ioctx*, %struct.srpt_ioctx** %6, align 8
  %25 = getelementptr inbounds %struct.srpt_ioctx, %struct.srpt_ioctx* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @kmem_cache_free(%struct.kmem_cache* %23, i32 %26)
  %28 = load %struct.srpt_ioctx*, %struct.srpt_ioctx** %6, align 8
  %29 = call i32 @kfree(%struct.srpt_ioctx* %28)
  br label %30

30:                                               ; preds = %12, %11
  ret void
}

declare dso_local i32 @ib_dma_unmap_single(i32, i32, i32, i32) #1

declare dso_local i32 @kmem_cache_size(%struct.kmem_cache*) #1

declare dso_local i32 @kmem_cache_free(%struct.kmem_cache*, i32) #1

declare dso_local i32 @kfree(%struct.srpt_ioctx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
